--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,5 @@
-
-aa
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+spring.cloud.discovery.enabled=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8094/eureka
