--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,4 @@ eureka.client.register-with-eureka=true
 spring.cloud.discovery.enabled=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8094/eureka
+management.endpoints.web.exposure.include=refresh
