--- a/application.properties
+++ b/application.properties
@@ -2,5 +2,5 @@ eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 spring.cloud.discovery.enabled=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8094/eureka
+eureka.client.service-url.defaultZone=${eureka_url:http://service-discovery:${EUREKA_PORT:8094}/eureka}
 management.endpoints.web.exposure.include=refresh
